include_HEADERS = \
	iRRAM.h

no_base_includedir = @includedir@/iRRAM

no_base_include_HEADERS = \
	iRRAM/lib.h \
	iRRAM/COMPLEX.h \
	iRRAM/FUNCTION.h \
	iRRAM/DYADIC.h \
	iRRAM/INTEGER.h \
	iRRAM/INTERVAL.h \
	iRRAM/LAZYBOOLEAN.h \
	iRRAM/RATIONAL.h \
	iRRAM/REAL.h \
	iRRAM/REALMATRIX.h \
	iRRAM/SPARSEREALMATRIX.h \
	iRRAM/STREAMS.h \
	iRRAM/SWITCHES.h \
	iRRAM/cache.h \
	iRRAM/errno.h\
	iRRAM/limit_templates.h\
	iRRAM/version.h \
	iRRAM/core.h \
	iRRAM/GMP_intrat.h \
	iRRAM/MPFR_interface.h \
	iRRAM/mpfr_extension.h
